[gd_scene load_steps=5 format=3 uid="uid://debi32dnmrjov"]

[ext_resource type="Script" uid="uid://38y8vkwtrqg7" path="res://main.gd" id="1_h2yge"]
[ext_resource type="Script" uid="uid://dx7x4o6fxqf5i" path="res://addons/common/hud/hud.gd" id="3_lquwl"]

[sub_resource type="SphereMesh" id="SphereMesh_0xm2m"]
radius = 0.05
height = 0.1

[sub_resource type="SphereMesh" id="SphereMesh_h2yge"]
radius = 0.05
height = 0.1

[node name="Main" type="Node3D"]
script = ExtResource("1_h2yge")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]

[node name="Hud" type="Label3D" parent="XROrigin3D"]
script = ExtResource("3_lquwl")

[node name="LeftEyePose" type="XRController3D" parent="XROrigin3D"]
tracker = &"/user/eye_tracker_android/left"
show_when_tracked = true

[node name="LeftEyeMesh" type="MeshInstance3D" parent="XROrigin3D/LeftEyePose"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)
mesh = SubResource("SphereMesh_0xm2m")

[node name="RightEyePose" type="XRController3D" parent="XROrigin3D"]
tracker = &"/user/eye_tracker_android/right"
show_when_tracked = true

[node name="RightEyeMesh" type="MeshInstance3D" parent="XROrigin3D/RightEyePose"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)
mesh = SubResource("SphereMesh_h2yge")
